--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   uuid: ^4.4.0
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.4
+  flutter_native_timezone: ^2.0.0
   intl: ^0.19.0
   glassmorphism: ^3.0.0
   animations: ^2.0.11
